--- a/schedule.html
+++ b/schedule.html
@@ -50,12 +50,25 @@
 					</select>
 				</div>
 				<div class="schedule-filter__item">
-					<select>
-						<option>Помещения</option>
-						<option>Помещения</option>
-						<option>Помещения</option>
-						<option>Помещения</option>
-					</select>
+					<div class="filter-multiply">
+						<span class="filter-multiply--header">
+							<label data-default="Ничего не выбрано">Все помещения</label>
+							<i class="button"></i>
+						</span>
+						<div class="filter-multiply__drop">
+							<ul>
+								<li><label><input type="checkbox" name="select-all" checked>Все помещения</label></li>
+								<li><label data-id="1"><input type="checkbox">Бассеин</label></li>
+								<li><label data-id="2"><input type="checkbox">Большой зал аэробики</label></li>
+								<li><label data-id="3"><input type="checkbox">Детская игровая</label></li>
+								<li><label data-id="4"><input type="checkbox">Детский бассеин</label></li>
+								<li><label data-id="5"><input type="checkbox">Детский зал</label></li>
+								<li><label data-id="6"><input type="checkbox">Зал бокса</label></li>
+								<li><label data-id="7"><input type="checkbox">Йога</label></li>
+								<li><label data-id="8"><input type="checkbox">Пилатес</label></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 				<div class="schedule-filter__item">
 					<select>
