mobile lk update

--- a/lk.html
+++ b/lk.html
@@ -125,9 +125,14 @@
 								<span class="lk__data--cell lk__data--status">Статус</span>
 							</div>
 							<div class="lk__data--item">
-								<span class="lk__data--cell">Акробатика - 10 занятий</span>
-								<span class="lk__data--cell lk__data--trainer">Ковшова Анна</span>
-								<span class="lk__data--cell lk__data--status">Оплачено</span>
+								<span class="lk__data--cell"><span>Наименование абонемента:</span> Акробатика - 10 занятий</span>
+								<span class="lk__data--cell lk__data--trainer"><span>Тренер:</span> Ковшова Анна</span>
+								<span class="lk__data--cell lk__data--status"><span>Статус:</span> Оплачено</span>
+							</div>
+							<div class="lk__data--item">
+								<span class="lk__data--cell"><span>Наименование абонемента:</span> Акробатика - 10 занятий</span>
+								<span class="lk__data--cell lk__data--trainer"><span>Тренер:</span> Ковшова Анна</span>
+								<span class="lk__data--cell lk__data--status"><span>Статус:</span> Оплачено</span>
 							</div>
 						</div>
 					</div>
@@ -145,9 +150,14 @@
 								<span class="lk__data--cell lk__data--status">Статус</span>
 							</div>
 							<div class="lk__data--item">
-								<span class="lk__data--cell">Главный врач</span>
-								<span class="lk__data--cell lk__data--trainer">10.11.2017</span>
-								<span class="lk__data--cell lk__data--status">Записано</span>
+								<span class="lk__data--cell"><span>ФИО специалиста:</span> Главный врач</span>
+								<span class="lk__data--cell lk__data--trainer"><span>Дата визита:</span> 10.11.2017</span>
+								<span class="lk__data--cell lk__data--status"><span>Статус:</span> Записано</span>
+							</div>
+							<div class="lk__data--item">
+								<span class="lk__data--cell"><span>ФИО специалиста:</span> Главный врач</span>
+								<span class="lk__data--cell lk__data--trainer"><span>Дата визита:</span> 10.11.2017</span>
+								<span class="lk__data--cell lk__data--status"><span>Статус:</span> Записано</span>
 							</div>
 						</div>
 					</div>
