--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body class="page_custom">
 	<div class="wrapper">
 		<header class="header">
-			<a href="#" class="header--logo"></a>
+			<a href="#" class="header--logo" data-open="gift"></a>
 			<nav class="nav">
 				<a href="#">О клубе</a>
 				<a href="#">Акции</a>
@@ -226,6 +226,50 @@
 		<h4>Минуточку! Хотите подарок?</h4>
 		<p>Оставьте ваш E-mail и мы вышлем вам промокод.<br>
 		Покажите промокод при оформлении договора менеджеру в отделе продаж и получите <span>стильный фитнес аксессуар</span></p>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
+		<div class="modal_gift__item">
+			<label>Электронный адрес:</label>
+			<input type="text">
+		</div>
 		<div class="modal_gift__item">
 			<label>Электронный адрес:</label>
 			<input type="text">
