--- a/about.html
+++ b/about.html
@@ -274,6 +274,7 @@
 			<label>Электронный адрес:</label>
 			<input type="text">
 		</div>
+		<span class="modal--agreement"><input type="checkbox" id="rules">Я согласен на обработку своих персональных данных (<a href="/files/agreement.pdf" target="_blank">соглашение</a>)</span>
 		<div class="modal_gift___controls">
 			<button class="reject">Я остаюсь без подарка</button>
 			<button class="take" data-modal-close>Я люблю подарки</button>
