--- a/about.html
+++ b/about.html
@@ -71,6 +71,9 @@
 				ИНН 7728571563 КПП 783843001 ОГРН 1067746218176</p>
 				<p>*Срок действия акции с 01.09.2017 по 30.09.2017 года включительно.</p>
 				<p>При полной оплате физкультурно-оздоровительных услуг при приобретении взрослой карты в фитнес-клуб сети «Океаниум», расположенный по адресу: г. Санкт-Петербург, ул. Кораблестроителей, д. 14. сроком на 365 календарных дней, стоимость карты составит 14 400 руб.</p>
+				<div class="about__video" data-video>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/v_tfjKJLa-M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
 				<p>Предложение актуально для Новых членов клуба (совершеннолетние физические лица, не заключавшие ранее Контракты с ООО «Спорт Форум» на оказание физкультурно-оздоровительных услуг, а также бывшие Члены клуба, с момента окончания последнего Контракта которых прошло 730 и более дней).</p>
 				<p>Другие действующие акции, предложения при приобретении клубной карты в соответствии с условиями настоящей Акции не применяются, скидки не суммируются.</p>
 				<p>Предложение НЕ ЯВЛЯЕТСЯ ПУБЛИЧНОЙ ОФЕРТОЙ.</p>
